`Removed migration files and updated SettingsModel in core/models.py`

--- a/frontend/html/admin/manager.html
+++ b/frontend/html/admin/manager.html
@@ -30,9 +30,9 @@
             <div class="bulk-send">
                 <h3>Single send</h3>
                 <input type="file" name=""  id="account-activation-b" accept=".csv, .xlsx, .xls, .ods">
-                <p>Note: The file should contain a column named "email" with the emails to send activation links to.</p>
-                <p>Note: The file should be in CSV, XLSX, XLS, or ODS format.</p>
-                <p>Upload a CSV or Excel file with a column named "email" containing the emails to send activation links to.</p>
+                <p>Note: The file should contain a column named <br> "email" with the emails to send activation links to.</p>
+                <p>Note: The file should be in <br> CSV, XLSX, XLS, or ODS format.</p>
+                <p>Upload a CSV or Excel file with a column named <br> "email" containing the emails to send activation links to.</p>
                 <div class="actions">
                     <input type="button" value="analyze" id="analyze">
                     <input type="button" value="send" id="send">
