--- a/frontend/html/graduationRegistration.html
+++ b/frontend/html/graduationRegistration.html
@@ -15,6 +15,7 @@
     <head>
       <nav>
         <h3>Graduation Registration</h3>
+        <a href="">Log In</a>
       </nav>
     </head>
     <main>
